--- a/lib/task_tracker_web/templates/task/show.html.eex
+++ b/lib/task_tracker_web/templates/task/show.html.eex
@@ -12,6 +12,10 @@
     <%= @task.done %>
   </li>
 
+  <li>
+    <strong>User:</strong>
+    <%= @task.user_id %>
+
 </ul>
 
 <span><%= link "Edit", to: Routes.task_path(@conn, :edit, @task) %></span>
