--- a/lib/task_tracker_web/templates/task/index.html.eex
+++ b/lib/task_tracker_web/templates/task/index.html.eex
@@ -5,8 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Done</th>
-
-      <th></th>
+      <th>Username</th>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +13,8 @@
     <tr>
       <td><%= task.name %></td>
       <td><%= task.done %></td>
+      <td><%= task.user_id %></td>
+      
 
       <td>
         <%= link "Show", to: Routes.task_path(@conn, :show, task) %>
