Registration and Sign in

--- a/lib/task_tracker_web/templates/layout/app.html.eex
+++ b/lib/task_tracker_web/templates/layout/app.html.eex
@@ -8,23 +8,45 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
+      <div class="container">
+        <nav role="nav navbar">
+          <div>
+            <ul>
+              <li>
+                <a class="nav-link" href="/">Home</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <%= if @current_user do %>
+              <p>
+                User: <%= @current_user.name %> |
+                <%= link("Sign out", to: Routes.session_path(@conn, :delete), method: :delete) %>
+              </p>
+              <% else %>
+                <%= form_for @conn, Routes.session_path(@conn, :create),
+                      [class: "form-inline"], fn f -> %>
+                <%= text_input f, :name, class: "form-control" %>
+                <%= submit "Sign in", class: "btn btn-secondary"%>
+                | <%= link "Register", to: Routes.user_path(@conn, :new) %>
+              <% end %>
+            <% end %>
+          </div>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+
+        <div class="row">
+          <div class="col-12">
+            <%= if get_flash(@conn, :info) do %>
+              <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+            <% end %>
+            <%= if get_flash(@conn, :error) do %>
+              <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+            <% end %>
+          </div>
+        </div>
       <%= render @view_module, @view_template, assigns %>
-    </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+      </div>
+    <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
