--- a/lib/task_tracker_web/templates/user/form.html.eex
+++ b/lib/task_tracker_web/templates/user/form.html.eex
@@ -5,11 +5,13 @@
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
+  <div class="form-group">
+    <%= label f, :name %>
+    <%= text_input f, :name %>
+    <%= error_tag f, :name %>
+  </div>
 
   <div>
-    <%= submit "Save" %>
+    <%= submit "Register" %>
   </div>
 <% end %>
