--- a/lib/task_tracker_web/templates/task/new.html.eex
+++ b/lib/task_tracker_web/templates/task/new.html.eex
@@ -1,6 +1,10 @@
 <h1>New Task</h1>
 <h2>Please note that any minute input will be rounded down to the nearest 15 minute</h2>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.task_path(@conn, :create)) %>
+    <%= if @current_user do %>
+        <%= render "form.html", Map.put(assigns, :action, Routes.task_path(@conn, :create)) %>
+    <% else %>
+        <p>Please sign in or register.</p>
+    <% end %>
 
 <span><%= link "Back", to: Routes.task_path(@conn, :index) %></span>
