--- a/lib/task_tracker_web/templates/user/show.html.eex
+++ b/lib/task_tracker_web/templates/user/show.html.eex
@@ -7,6 +7,25 @@
     <%= @user.name %>
   </li>
 
+  <li>
+    <strong>Manager?:</strong>
+    <%= @user.ismanager %>
+  </li>
+
+  <li>
+    <strong>Manager:</strong>
+    <%= @user.manager_name %>
+  </li> 
+
+  <li>
+  <strong>Managing:</strong>
+    <%= for user <- TaskTracker.Users.list_users() do %>
+      <%= if user.manager_name == @user.name do %>
+        <div>
+          <p><%= user.name %></p>
+        </div>
+      <% end %>
+    <% end %>
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
