--- a/lib/task_tracker_web/templates/page/index.html.eex
+++ b/lib/task_tracker_web/templates/page/index.html.eex
@@ -1,14 +1,25 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-12">
     <h1>Welcome to Task Tracker</h1>
   </div>
   <div>
     <%= if @current_user do %>
-    <!-- Idea: run Enum.filter on all tasks and if the user_id is the current_user id then show it? Essentially
-    the index function for the tasks page, except filtered on which tasks to throw in there -->
+    Idea: run Enum.filter on all tasks and if the user_id is the current_user id then show it? Essentially
+    the index function for the tasks page, except filtered on which tasks to throw in there
      <p>Need to figure out how to show all of a users current tasks here</p>
     <% else %>
       <p>No tasks for this user</p>
     <% end %>
   </div>
+</div> -->
+<div id="root">
+  <div class="row">
+    <div class="col-12">
+      <p>React component loading...</p>
+    </div>
+  </div>
 </div>
+
+<script>
+  window.tasks = <%= raw Jason.encode!(@tasks) %>
+</script>
